--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighbors = [{'name': 'Bob', 'x': 4, 'y': 8}, {'name': 'Suzie', 'x': 1, 'y': 11}, \n",
+    "neighbors = [{'name': 'Bob', 'x': 4, 'y': 8}, \n",
+    "             {'name': 'Suzie', 'x': 1, 'y': 11}, \n",
     "             {'name': 'Fred', 'x': 5, 'y': 8}, {'name': 'Edgar', 'x': 6, 'y': 13},\n",
     "             {'name': 'Steven', 'x': 3, 'y': 6}, {'name': 'Natalie', 'x': 5, 'y': 4}]\n",
     "bob = neighbors[0]\n",
